Fixed data integration plugin bugs reported by findbugs.